--- a/result/index.html
+++ b/result/index.html
@@ -2,10 +2,17 @@
 <html lang="en">
 <head>
 <script type="text/javascript" src="../js/jquery.js"></script>
+<link type="text/css" rel="stylesheet" href="./css/index.css">
 <script type="text/javascript" src="js/get_result.js"></script>
 </head>
 <body onload="get_result();">
-  <div id = "keys">
+  <div id = "keys" class = "keys">
+  </div>
+  <div id = "picture_1" class = "picture_1">
+  </div>
+  <div id = "picture_2" class = "picture_2">
+  </div>
+  <div id = "subtract" class = "subtract">
   </div>
 </body>
 </html>
