--- a/result/index.html
+++ b/result/index.html
@@ -22,6 +22,7 @@
   </div>
   <div id = "operations" class = "operations">
     <input type="button" value = "subtract" onclick="subtract();" />
+    <input type="button" value = "clear all data (Dangerous!!!)" onclick="clear_all_data();" />
   </div>
 </body>
 </html>
