--- a/detail/index.html
+++ b/detail/index.html
@@ -4,6 +4,7 @@
     <script type="text/javascript" src="js/jquery.js"></script>
     <link type="text/css" rel="stylesheet" href="css/index.css">
     <script type="text/javascript" src="js/get_result.js"></script>
+    <script type="text/javascript" src="js/details.js"></script>
   </head>
   <body onload="get_keys();">
     <div id = "left" class="left">
@@ -11,7 +12,7 @@
         <option disabled selected value> -- select an option -- </option>
       </select>
       <div id = "detail_1">
-        <table id="table_1">
+        <table id="table_1" class="table">
         </table>
       </div>
     </div>
@@ -20,7 +21,7 @@
         <option disabled selected value> -- select an option -- </option>
       </select>
       <div id = "detail_2">
-        <table id="table_2">
+        <table id="table_2" class="table">
         </table>
       </div>
     </div>
